fix recipes